<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tblAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:measureWithLargestChild="true"
        android:stretchColumns="1,2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trDatetimeRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvDateLabel"
                android:text="@string/dateLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionLabel" />

            <TextView
                android:id="@+id/tvDateInput"
                android:text="@string/dateLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />

            <TextView
                android:id="@+id/tvTimeInput"
                android:text="@string/timeLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />

        </TableRow>

        <TableRow
            android:id="@+id/trFromRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvFromLabel"
                android:text="@string/fromLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionLabel" />

            <TextView
                android:id="@+id/tvFromEntityClass"
                android:text="@string/entityClassLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />

            <TextView
                android:id="@+id/tvFromEntity"
                android:text="@string/entityLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />
        </TableRow>

        <TableRow
            android:id="@+id/trToRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvToLabel"
                android:text="@string/toLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionLabel" />

            <TextView
                android:id="@+id/tvToEntityClass"
                android:text="@string/entityClassLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />

            <TextView
                android:id="@+id/tvToEntity"
                android:text="@string/entityLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionInput" />
        </TableRow>


        <TableRow
            android:id="@+id/trCategoryRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvCategoryLabel"
                android:text="@string/categoryLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionLabel" />
        </TableRow>


        <TableRow
            android:id="@+id/trNoteRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvNoteLabel"
                android:text="@string/noteLabel"
                android:textSize="@dimen/addTransactionLabel"
                android:theme="@style/addTransactionLabel" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>